docs: refresh agent project guide