@@ -1,267 +1,104 @@
-# jlcx-lib - Project Overview
+# Project Overview
 
-## Introduction
+`jlcx-lib` is a Java 17 toolkit for building reactive Vert.x services with a small DI container, compile-time code generation, JDBC/JPA/reactive database helpers, and common infrastructure utilities.
 
-**jlcx-lib** is a reactive Java microservices toolkit built on top of Vert.x. It provides a
-lightweight dependency injection container, annotation-driven HTTP routing with compile-time
-code generation, multi-database ORM support, and a rich set of utilities.
+This document is the high-level map. Read narrower docs before editing a domain:
 
-| Property      | Value                                 |
-|---------------|---------------------------------------|
-| GroupId       | `vn.io.lcx`                          |
-| ArtifactId    | `lcx-lib`                             |
-| Version       | `4.0.5.lcx-SNAPSHOT`                           |
-| Java Version  | 17                                    |
-| Build Tool    | Maven 3.9+                            |
-
----
+- DI: `docs/classpool-di-container.md`
+- HTTP: `docs/vertx-web-framework.md`
+- Database: `docs/database-layer.md`
+- Processors: `docs/annotation-processors.md`
+- Utilities: `docs/utilities.md`
+- Examples: `docs/examples.md`
+- Config: `docs/configuration.md`
+- Tests: `docs/testing-guide.md`
 
 ## Modules
 
-The project is a Maven multi-module build with two published modules and three example
-applications.
+| Module/path | Purpose |
+|---|---|
+| `common-lib` | Main library and most source code. It contains common utilities, DI/config, database layers, JPA contracts, reactive repositories, Vert.x web framework, and processor implementations. |
+| `processor` | Annotation-processor facade jar. It registers processor class names through Java SPI and depends on `common-lib`, where the processor implementations live. |
+| `examples/todo-app-example` | Reactive SQL Todo app with backend, React/Vite frontend, Dockerfile, and Helm chart. |
+| `examples/hibernate-reactive-example` | Hibernate Reactive Todo app with backend and React/Vite frontend. |
+| `examples/grpc-example` | gRPC client/server/proto sample with protoc scripts. |
 
-```
-jlcx-lib/
-├── common-lib/          Main library - DI, HTTP, database, utilities
-├── processor/           Annotation processor module (depends on common-lib)
-├── examples/
-│   ├── todo-app-example/
-│   ├── hibernate-reactive-example/
-│   └── grpc-example/
-└── docs/                Documentation
-```
+Root Maven modules are `common-lib` and `processor`. Example projects are not root Maven modules.
 
-### common-lib
+## Source Package Map
 
-The core module containing all runtime code:
+| Package | Role |
+|---|---|
+| `vn.io.lcx.common.annotation` | DI annotations, entity/table annotations, mapper annotations, SQL mapping annotations. |
+| `vn.io.lcx.common.config` | `ClassPool`, default object mappers, Gson, Logback setup, framework defaults. |
+| `vn.io.lcx.common.database` | JDBC executor, connection context, database property model, DDL/entity/query helpers. |
+| `vn.io.lcx.common.database.strategy` | Oracle, PostgreSQL, MySQL, SQL Server DDL strategies. |
+| `vn.io.lcx.common.database.pageable` | Cross-database pagination SQL generation. |
+| `vn.io.lcx.common.database.specification` | Fluent SQL condition builder. |
+| `vn.io.lcx.common.utils` | String, object, JSON/YAML, crypto, date/time, file, random, HTTP, collection, serialization helpers. |
+| `vn.io.lcx.common.cache` | Redis pool abstraction and implementation. |
+| `vn.io.lcx.common.mail` | Mail config and reactive mail sending. |
+| `vn.io.lcx.common.cron` | Cron parser and field model. |
+| `vn.io.lcx.common.lock` | Lock manager helpers. |
+| `vn.io.lcx.common.thread` / `task` | Executor, virtual-thread support, batch and retry helpers. |
+| `vn.io.lcx.common.context` | Request/auth context. |
+| `vn.io.lcx.common.logging` | Logback MDC converters for Vert.x trace/operation values. |
+| `vn.io.lcx.jpa.*` | JPA annotations, repository contract, entity/session helpers. Note the actual package typo `respository` exists in source. |
+| `vn.io.lcx.reactive.*` | Vert.x SQL repository contracts, SQL statement model, reactive transaction/connection/mapping helpers, Hibernate Reactive contract. |
+| `vn.io.lcx.vertx.base.*` | HTTP annotations, controller base, wrappers, request/response models, validation, Verticle base. |
+| `vn.io.lcx.processor.*` | All 9 annotation processor implementations plus generator models, services, templates, and utilities. |
 
-| Package                         | Description                                    |
-|---------------------------------|------------------------------------------------|
-| `vn.io.lcx.common.annotation` | DI and mapping annotations                     |
-| `vn.io.lcx.common.config`     | `ClassPool` DI container, configuration        |
-| `vn.io.lcx.common.scanner`    | Runtime package scanning (`PackageScanner`)    |
-| `vn.io.lcx.common.database`   | JDBC execution, strategies, entity analysis    |
-| `vn.io.lcx.common.database.context` | `ConnectionContext` (deprecated)          |
-| `vn.io.lcx.common.utils`      | 28 utility classes                             |
-| `vn.io.lcx.common.constant`   | Global constants                               |
-| `vn.io.lcx.common.exception`  | Custom exceptions                              |
-| `vn.io.lcx.common.cache`      | Caching abstractions                           |
-| `vn.io.lcx.common.task`       | Task execution, batch processing, retry logic  |
-| `vn.io.lcx.common.thread`     | Thread utilities                               |
-| `vn.io.lcx.common.lock`       | Locking mechanisms                             |
-| `vn.io.lcx.common.mail`       | Email utilities                                |
-| `vn.io.lcx.common.cron`       | Scheduled task / cron support                  |
-| `vn.io.lcx.common.logging`    | Logging configuration                          |
-| `vn.io.lcx.common.dto`        | Shared DTOs                                    |
-| `vn.io.lcx.common.context`    | Context management (`AuthContext`)              |
-| `vn.io.lcx.common.array`      | `LargeArray<T>` - chunked large collections    |
-| `vn.io.lcx.common.ref`        | `Ref<T>` - mutable reference wrapper           |
-| `vn.io.lcx.common.javaassist` | Bytecode manipulation via Javassist            |
-| `vn.io.lcx.jpa`               | JPA/Hibernate ORM layer                        |
-| `vn.io.lcx.jpa.dto`           | `BaseEntityDTO`, `BaseUnixEntityDTO`           |
-| `vn.io.lcx.jpa.functional`    | `RowMapper`, `BatchCallback`, `ResultBatchCallback` |
-| `vn.io.lcx.reactive`          | Hibernate Reactive integration                 |
-| `vn.io.lcx.reactive.functional`| `RowBatchCallback<T,U>` async batch callback  |
-| `vn.io.lcx.reactive.wrapper`  | `PreparedQueryWrapper`, `PoolLcxWrapper`       |
-| `vn.io.lcx.reactive.utils`    | `ReactiveRowStreamingUtils`, reactive `FileUtils` |
-| `vn.io.lcx.vertx`             | Vert.x web framework base classes              |
-| `vn.io.lcx.vertx.base.utils`  | `VertxSocketClientUtils`, `VertxWebClientHttpUtils` |
-| `vn.io.lcx.processor`         | Annotation processor implementations           |
+## Runtime Architecture
 
-### processor
+Typical app flow:
 
-A thin module that registers annotation processors via
-`META-INF/services/javax.annotation.processing.Processor`. It depends on `common-lib` at
-compile scope. The nine registered processors are:
+1. App class uses `@VertxApplication`.
+2. Annotation processors generate routing, wrappers, repositories, service proxies, SQL mapping helpers, and DI class indexes.
+3. `ClassPool` scans configured packages and generated class indexes, registers components/instances, resolves dependencies, and runs lifecycle hooks.
+4. Generated `ApplicationVerticle` wires Vert.x routes, auth handlers, static resources, and controller wrappers.
+5. Controllers delegate to services/repositories that return `Future<T>` for async Vert.x paths.
 
-| Processor                      | Annotation Target          | Output                                |
-|--------------------------------|----------------------------|---------------------------------------|
-| `ControllerProcessor`          | `@Controller`, `@VertxApplication`, `@ContextHandler` | `ApplicationVerticle` with routing |
-| `RestControllerProcessor`      | `@RestController`          | Reactive controller wrapper           |
-| `RepositoryProcessor`          | Repository interfaces      | JDBC repository implementations       |
-| `HRRepositoryProcessor`        | HR repository interfaces   | Hibernate Reactive repository impls   |
-| `ReactiveRepositoryProcessor`  | Reactive repository ifaces | Vert.x reactive repository impls      |
-| `ServiceProcessor`             | Service interfaces         | Service proxies with transactions     |
-| `MapperClassProcessor`         | `@MapperClass`             | Object mapper implementations         |
-| `SQLMappingProcessor`          | `@SQLMapping`              | Entity utils + `EntityMapping` impls  |
-| `DIScanner`                    | DI-related annotations     | Component scanning helpers            |
+## Important Generated Outputs
 
----
+| Trigger | Generated output |
+|---|---|
+| `@VertxApplication`, `@Controller`, `@ContextHandler` | Fixed `vn.io.lcx.vertx.verticle.ApplicationVerticle` |
+| `@RestController` | `Reactive{OriginalClass}` wrapper extending `ReactiveController` |
+| `@Repository` | `{RepositoryInterface}Proxy` |
+| `@Service` | `{ServiceClass}Proxy` |
+| `@RRepository` | `{RepositoryInterface}Impl` |
+| `@HRRepository` | `{RepositoryInterface}Impl` |
+| `@MapperClass` | `{MapperInterface}Impl` |
+| `@SQLMapping` | `{Entity}Utils` and `{Entity}MappingImpl` |
+| `@Component` scanned by `DIScanner` | `META-INF/class-index-{UUID}.json` |
 
-## Technology Stack
+## Resources
 
-### Core Runtime
+`common-lib/src/main/resources` contains:
 
-| Technology            | Version   | Purpose                                      |
-|-----------------------|-----------|----------------------------------------------|
-| Vert.x                | 5.0.10    | Async event loop, HTTP server, SQL clients   |
-| Hibernate ORM         | 7.3.0     | JPA persistence (sync)                       |
-| Hibernate Reactive    | 4.3.0     | Non-blocking persistence                     |
-| HikariCP              | 7.0.2     | JDBC connection pooling                      |
-| Gson                  | 2.13.2    | JSON serialization/deserialization           |
-| Jackson               | 2.21.2    | JSON/XML data binding (5 modules)            |
-| SnakeYAML             | 2.6       | YAML configuration loading                   |
-| SLF4J + Logback       | 2.0.17 / 1.5.32 | Logging                               |
-| Javassist             | 3.30.2    | Bytecode manipulation                        |
-| Lombok                | 1.18.44   | Boilerplate reduction                        |
-| Apache Commons Text   | 1.15.0    | Text manipulation and interpolation          |
-| Apache Commons Lang3  | 3.20.0    | String utilities, reflection helpers         |
-| Apache Commons Collections4 | 4.5.0 | Advanced collection operations             |
-| JAXB API + Runtime    | 4.0.5 / 4.0.7 | XML binding                             |
-| Jakarta Persistence API | 3.2.0   | JPA specification                            |
-| Jakarta Annotation API | 3.0.0    | Annotation processing                        |
+- `default-banner.txt`
+- `default-logback.xml`
+- generator templates under `template/` for controller, verticle, repository, service, SQL mapping, entity mapping, JPA method/do-work, and criteria handling
 
-### Database Drivers
+There is no main `application.yaml` in `common-lib`; app configs live in examples/tests.
 
-| Database              | Driver Version  |
-|-----------------------|-----------------|
-| Oracle                | ojdbc11 23.26.1 |
-| PostgreSQL            | 42.7.10         |
-| MySQL                 | 9.6.0           |
-| SQL Server            | 13.4.0          |
+## Dependency Source Of Truth
 
-### Messaging & Caching
+Do not hardcode exact dependency versions into docs unless needed for a migration note. Use `pom.xml`.
 
-| Technology            | Version   |
-|-----------------------|-----------|
-| Apache Kafka          | 4.2.0     |
-| Jedis (Redis)         | 7.4.1     |
-| Ehcache               | 3.12.0    |
+Current key versions at this refresh:
 
-### gRPC
+| Dependency | Version |
+|---|---|
+| Java | 17 |
+| Vert.x | 5.0.12 |
+| Hibernate ORM | 7.3.3.Final |
+| Hibernate Reactive | 4.3.3.Final |
+| JAXB runtime | 4.0.8 |
 
-| Technology            | Version   |
-|-----------------------|-----------|
-| gRPC (Netty shaded)   | 1.80.0    |
-| Protobuf              | 4.34.1    |
+## Editing Guidance
 
-### Monitoring
-
-| Technology                    | Version   |
-|-------------------------------|-----------|
-| Micrometer Core               | 1.16.4    |
-| Micrometer Prometheus Registry| 1.16.4    |
-| Dropwizard Metrics 4          | 4.2.38    |
-| Dropwizard Metrics 5          | 5.0.6     |
-
-### Security
-
-| Technology            | Version   |
-|-----------------------|-----------|
-| Vert.x Auth JWT       | 5.0.10    |
-| jBCrypt               | 0.4       |
-| Jakarta Mail           | 2.0.5     |
-
-### Testing
-
-| Technology            | Version   |
-|-----------------------|-----------|
-| JUnit Jupiter         | 6.0.3     |
-| Mockito               | 5.23.0    |
-| Mockito Inline        | 5.2.0     |
-| DataFaker             | 2.5.4     |
-| H2 Database           | 2.4.240   |
-| Vert.x Unit           | 5.0.10    |
-
----
-
-## Architecture Overview
-
-```
-┌─────────────────────────────────────────────────────┐
-│                  Application Code                    │
-│  @Controller  @Component  @RestController  @Entity   │
-└──────────┬─────────────┬─────────────┬──────────────┘
-           │             │             │
-    ┌──────▼──────┐ ┌────▼────┐ ┌─────▼──────┐
-    │ Vert.x Web  │ │ClassPool│ │  Database   │
-    │  Framework  │ │   DI    │ │   Layer     │
-    │ (generated) │ │Container│ │ (ORM/JDBC)  │
-    └──────┬──────┘ └────┬────┘ └─────┬──────┘
-           │             │             │
-    ┌──────▼─────────────▼─────────────▼──────┐
-    │            Vert.x Core 5.0.10             │
-    │     Event Loop  │  Worker Pool           │
-    └──────────────────┬───────────────────────┘
-                       │
-    ┌──────────────────▼───────────────────────┐
-    │        Infrastructure Services            │
-    │  Redis │ Kafka │ Mail │ Metrics │ gRPC   │
-    └──────────────────────────────────────────┘
-```
-
-### Key Design Principles
-
-1. **Compile-time code generation** - Annotation processors generate routing, repository, and
-   mapper code at build time. No runtime reflection for route discovery.
-
-2. **Async-first** - All controller methods return `Future<T>`. Non-blocking I/O through the
-   Vert.x event loop.
-
-3. **Lightweight DI** - `ClassPool` provides a simple two-phase dependency injection container
-   without the overhead of Spring or CDI. See [classpool-di-container.md](classpool-di-container.md).
-
-4. **Multi-database** - Strategy pattern for DDL generation across Oracle, PostgreSQL, MySQL,
-   and SQL Server. Dual sync (Hibernate ORM) and async (Hibernate Reactive / Vert.x SQL clients)
-   data access.
-
-5. **Convention over configuration** - Sensible defaults with YAML configuration override via
-   `application.yaml`.
-
----
-
-## Configuration
-
-The framework loads `application.yaml` from the classpath. Properties are accessed via
-`CommonConstant.applicationConfig` (an `LCXProperties` instance).
-
-Environment variable substitution is supported:
-
-```yaml
-server:
-  port: ${SERVER_PORT:8080}
-  enable-http-2: false
-  enable-metrics: false
-  enable-virtual-thread: false
-  body-bytes-limit: 10485760
-  api-key: ${API_KEY:}
-
-database:
-  connection-string: ${DB_URL:jdbc:postgresql://localhost:5432/mydb}
-  username: ${DB_USER:postgres}
-  password: ${DB_PASS:secret}
-  driver-class-name: org.postgresql.Driver
-  initial-pool-size: 5
-  max-pool-size: 20
-```
-
----
-
-## Build & Scripts
-
-| Script         | Purpose                            |
-|----------------|------------------------------------|
-| `build.sh/ps1` | Full Maven build                   |
-| `clean.sh/ps1` | Clean build artifacts              |
-| `snapshot.sh/ps1` | Deploy snapshot to repository   |
-| `release.sh/ps1`  | Deploy release to repository    |
-
-Build command:
-
-```bash
-mvn clean install
-```
-
-The `-proc:full` compiler argument ensures annotation processors run during compilation.
-
----
-
-## Related Documentation
-
-| Document                                                  | Description                   |
-|-----------------------------------------------------------|-------------------------------|
-| [classpool-di-container.md](classpool-di-container.md)    | DI container reference        |
-| [vertx-web-framework.md](vertx-web-framework.md)         | HTTP framework & routing      |
-| [database-layer.md](database-layer.md)                    | Database & ORM reference      |
-| [utilities.md](utilities.md)                              | Utility classes reference     |
+- Keep changes surgical. Most framework behavior is compile-time generated; inspect processors/templates before changing annotations.
+- Prefer existing helper APIs over new abstractions.
+- Update the narrow doc when changing behavior. Keep `AGENTS.md`/`CLAUDE.md` as a routing index.
+- For generated-code changes, verify with processor tests and at least one downstream compile.
